feat: novos métodos
-getAllUsers
-getByIdUser
