# src/app/routes/User/Private/getAll.js
@@ -1,0 +1,9 @@
+const router = require('express').Router();
+
+const {UserControllers} = require('../../../controllers');
+
+
+
+router.get('/getAll', UserControllers.getAll);
+
+module.exports = router;
