# src/app/routes/User/Private/getById.js
@@ -1,0 +1,10 @@
+const router = require('express').Router();
+
+
+const {UserControllers} = require('../../../controllers');
+
+
+router.get('/getById/:uuid', UserControllers.getById);
+
+
+module.exports = router;
